--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 project(Sorter)
 add_executable(${PROJECT_NAME} "main.cpp")
+target_link_libraries(${PROJECT_NAME} pthread)
